tooling/nargo_cli/tests/snapshots/execution_success/bool_not/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: bool) {
    assert(x);
}
