tooling/nargo_cli/tests/snapshots/execution_success/bool_not/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 1
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/6WOQQqAMAwELfigpEnazc2vWEz//wQRKgqiF+eysIdh0nSRpifnt4ylf/DdJVRUo+Zg4ZWyNxiptQIGG2zLEAkoqjev5KwS3M2lD9nRNn+0v7EDo/0phPQAAAA=",
  "debug_symbols": "dY/RCoMwDEX/Jc99cBuD4a+MIbVGCYS0xHYwxH9fFN3cw57S5Pbc5E7QYVuGhqSPI9T3CVolZhoajsFnimLTaXawt01WRBvBQTcqeUXJUEthdvD0XNZPY/Ky1uzV1MoBSmfVDHtiXF6z+9LVf/R829jL9QNfjX5Y5wPpz71QQX2aFzMl3zJuGfoi4RApv9Ku7KGTxoBdUVzsVs0WvAE=",
  "file_map": {
    "50": {
      "source": "fn main(x: u1) {\n    assert(!x == 0);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": []
}
